# rust_chip8_emulator

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md  vite.config.js
.github/workflows/: gh-pages.yml
src/: constants.rs  cpu.rs  display.rs  lib.rs  main.rs  wasm.rs
web/: index.html  tsconfig.json
web/pkg/: package.json  rust_chip8_emulator.d.ts  rust_chip8_emulator.js  rust_chip8_emulator_bg.wasm  rust_chip8_emulator_bg.wasm.d.ts
web/src/: App.tsx  index.css
